# web-route

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build-and-test.yml  release-plz.yml
examples/: axum_nested_redirect.rs
src/: error.rs  lib.rs  route_segment.rs  segment.rs  to_segments.rs  utils.rs  web_route.rs
src/parameterized_route/: mod.rs  route.rs  segment.rs
src/web_route/: route.rs  segment.rs
tests/: axum_nested_route.rs  axum_path_extractor.rs
