[package]
name = "web-route"
version = "0.1.0-alpha.1"
edition = "2024"

[[example]]
name = "axum_nested_redirect"

[dependencies]
serde = "1"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
axum = "0.8"
axum-test = "17"
fake = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
