[package]
name = "web-route"
version = "0.2.2"
edition = "2024"
description = "Ergonomic web route construction, joining, and population for Rust web frameworks"
license = "MIT"
repository = "https://github.com/sidrubs/web-route"
readme = "README.md"
keywords = ["route", "path", "join", "web"]

[[example]]
name = "axum_nested_redirect"

[dependencies]
serde = "1"
serde_json = "1"
thiserror = "2"

# `fake` feature deps
fake = { version = "4", optional = true }

[dev-dependencies]
axum = "0.8"
axum-test = "17"
fake = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = ["serde", "fake"]
fake = ["dep:fake"]

# Derives `serde::{Serialize, Deserialize}`.
# `serde` is already present in the dependency tree. Adding this as a feature
# in-case we can remove it in the future.
serde = []
